update to about-section

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Sora:wght@600;700;800&display=swap');
+
 * {
     box-sizing: border-box;
+}
+
+:root {
+    --primary-color: #FF5B2E;
 }
 
 html {
@@ -34,9 +40,11 @@ a {
 }
 
 .btn {
-    --height: 60px;
+    --height: 56px;
 
-    display: inline-block;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
     min-width: 130px;
     line-height: var(--height);
     height: var(--height);
@@ -46,6 +54,23 @@ a {
     font-size: 1.4rem;
     text-align: center;
     color: #000958;
+}
+
+.btn--primary {
+    color: #fff;
+    background-color: var(--primary-color);
+    border-color: var(--primary-color);
+}
+
+.btn-icon {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 20px;
+    height: 20px;
+    background: #FFFAF5;
+    box-shadow: 4px 3px 10px -1px rgba(191, 41, 0, 0.4);
+    border-radius: 50%;
 }
 
 .btn:hover {
@@ -61,6 +86,21 @@ a {
 
 .logo {
     cursor: pointer;
+}
+
+.section__heading {
+    font-family: 'Sora', sans-serif;
+    font-weight: 700;
+    font-size: 5.2rem;
+    line-height: 1.19;
+    color: #000958;
+}
+
+.section__desc {
+    font-weight: 400;
+    font-size: 1.6rem;
+    line-height: 1.88;
+    color: #656689;
 }
 
 /* Header */
@@ -97,41 +137,298 @@ a {
 
 /* Hero */
 .hero {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
     margin-top: 100px;
 }
 
-.hero__left {
-    width: 52.1%;
+.hero__inner {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    column-gap: 120px;
 }
 
-.hero__images {
+.hero__media {
+    display: flex;
     position: relative;
-    padding: 0 200px 58px;
+    padding-bottom: 94px;
 }
 
-.hero__background:first-child {
+.hero__img-wrap {
+    position: relative;
+    display: flex;
+    align-items: flex-end;
+    justify-content: center;
     width: 388px;
     height: 488px;
-    background: #FE997B;
+    background: #fe997b;
     border-radius: 16px;
-}
-
-.hero__background {
-    position: absolute;
-    bottom: 0;
-    right: 0;
-    padding-top: 20px;
-    width: 186px;
-    height: 244px;
-    background: #FAA7AD;
-    overflow: hidden;
+    border: 3px solid #fff;
 }
 
 .hero__img {
     max-width: 100%;
     object-fit: cover;
+    border-radius: inherit;
+}
+
+.hero__decor {
+    position: absolute;
+    z-index: -1;
+}
+
+.hero__decor-left {
+    left: -58px;
+    bottom: 10px;
+}
+
+.hero__decor-right {
+    top: 16px;
+    right: -43px;
+}
+
+.hero__img-wrap-small {
+    width: 186px;
+    height: 244px;
+    margin: 0 0 -58px -24px;
+    align-self: flex-end;
+    border: 2px solid #f7dddf;
+    background: #faa7ad;
+}
+
+.hero__list {
+    position: absolute;
+    background: #fff;
+    bottom: 0;
+    left: 129px;
+    width: 250px;
+    height: 156px;
+    padding: 18px 14px 18px;
+    box-shadow: -17px 14px 68px -4px rgba(207, 174, 132, 0.25);
+    border-radius: 10px
+}
+
+.hero-list-item {
+    display: flex;
+}
+
+.hero-list-item__thumb {
+    width: 40px;
+    height: 40px;
+    background: #FEC23F;
+    border-radius: 10px;
+    object-fit: cover;
+    margin-right: 9px;
+}
+
+.hero-list-item:nth-of-type(2) .hero-list-item__thumb {
+    margin-bottom: 0;
+    background: #c6e2fa;
+}
+
+.hero-list-item__title {
+    font-family: Sora, sans-serif;
+    font-weight: 600;
+    font-size: 1.4rem;
+    line-height: 1;
+    color: #181E52;
+}
+
+.hero-list-item____skeleton {
+    margin-top: 6px;
+    height: 4px;
+    left: 329.49px;
+    top: 643px;
+    width: var(--width, 118px);
+    background: #000958;
+    opacity: 0.08;
+    border-radius: 10px;
+}
+
+.hero-list-item__separate {
+    margin-top: 20px;
+    margin-bottom: 20px;
+    width: 222px;
+    height: 0px;
+    border: 2px solid #F2F2F2;
+}
+
+.hero__heading {
+    max-width: 517px;
+    font-family: 'Sora', sans-serif;
+    font-weight: 800;
+    font-size: 6.6rem;
+    line-height: 1.15;
+    color: #000958;
+}
+
+.hero__desc {
+    width: 391px;;
+    margin: 24px 0 38px;
+    font-weight: 400;
+    font-size: 1.6rem;
+    line-height: 1.88;
+    color: #656689;
+}
+
+.hero-cta {
+    display: flex;
+    align-items: center;
+    column-gap: 24px;
+}
+
+.hero-cta__link {
+    --height: 60px;
+    min-width: 190px;
+    font-size: 1.6rem;
+    box-shadow: 0px 13px 26px -8px rgba(255, 91, 46, 0.42);
+}
+
+.hero-cta__icon {
+    margin-left: 10px;
+}
+
+.hero-cta__call {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1;
+    color: #000958;
+}
+
+.hero-cta__call:hover {
+    text-decoration-line: underline;
+}
+
+/* About */
+.about {
+    margin-top: 77px;
+}
+
+.about__inner {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    align-items: center;
+    padding: 61px 0 53px;
+    column-gap: 108px;
+}
+
+.about__label {
+    font-family: 'Sora';
+    font-weight: 600;
+    font-size: 1.6rem;
+    line-height: 1;
+    color: #5E6085;
+}
+
+.about__heading {
+    width: 446px;
+    margin: 15px 0 24px;
+}
+
+.about__desc {
+    width: 431px;
+}
+
+.about__checklist {
+    display: grid;
+    grid-template-columns: auto auto;
+    justify-content: space-between;
+    gap: 36px;
+    margin-top: 54px;
+}
+
+.about__check-item {
+    position: relative;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    font-weight: 500;
+    font-size: 1.8 rem;
+    line-height: 1;
+    color: #48496A;
+}
+
+.about__check-item::before {
+    content: '';
+    display: inline-block;
+    width: 24px;
+    height: 24px;
+    background: var(--primary-color);
+    box-shadow: 0px 4px 15px -3px rgba(255, 93, 49, 0.69);
+    border-radius: 4px;
+}
+
+.about__check-item::after {
+    position: absolute;
+    content: url(../assets/icon/check.svg);
+    left: 5px;
+    top: 2px;
+}
+
+.about__media {
+    position: relative;
+    bottom: 0;
+}
+
+.about__card {
+    text-align: center;
+    position: absolute;
+    top: 157px;
+    left: 0;
+    padding: 31px 26px 29px;
+    background: #5BD6E2;
+    box-shadow: -15px 26px 48px rgba(85, 240, 255, 0.17);
+    border-radius: 10px;
+}
+
+.about__card-title {
+    font-family: 'Sora', sans-serif;
+    font-weight: 700;
+    font-size: 4.2rem;
+    line-height: 1;
+    color: #FFFFFF;
+}
+
+.about__card-decor {
+    position: absolute;
+    top: -39px;
+    right: -32px;
+}
+
+.about__card-desc {
+    margin-top: 14px;
+    width: 83px;
+    font-weight: 400;
+    font-size: 1.4rem;
+    line-height: 1.43;
+    color: #C6F4F9;
+}
+
+.about__img-wrap {
+    position: relative;
+    margin-left: 92px;
+    width: 494px;
+}
+
+.about__img-wrap::after {
+    content: '';
+    position: absolute;
+    height: 336px;
+    display: inline-block;
+    background: linear-gradient(180deg, #FCE0EF 0%, #FAC3D1 100%);
+    border-radius: 16px;
+    inset: auto 0 0 0;
+    z-index: -1;
+}
+
+.about__img {
+    width: 450px;
+    margin: 0 auto;
     display: block;
+}
+
+.about__media-decor {
+    position: absolute;
+    top: 157px;
+    right: -50px;
+    z-index: -1;
 }
