--- a/css/style.css
+++ b/css/style.css
@@ -51,7 +51,7 @@ a {
     border: 1px solid rgba(0, 0, 88, .7);
     border-radius: 99px;
     font-weight: 600;
-    font-size: 1.4rem;
+    font-size: 1.6rem;
     text-align: center;
     color: #000958;
 }
@@ -59,7 +59,13 @@ a {
 .btn--primary {
     color: #fff;
     background-color: var(--primary-color);
-    border-color: var(--primary-color);
+    border-color: currentColor;
+}
+
+.btn--white {
+    background-color: transparent;
+    color: var(--primary-color);
+    border-color: currentColor;
 }
 
 .btn-icon {
@@ -97,10 +103,20 @@ a {
 }
 
 .section__desc {
+    margin-top: 24px;
     font-weight: 400;
     font-size: 1.6rem;
     line-height: 1.88;
     color: #656689;
+}
+
+.section__label {
+    margin-bottom: 15px;
+    font-family: 'Sora';
+    font-weight: 600;
+    font-size: 1.6rem;
+    line-height: 1;
+    color: #5E6085;
 }
 
 /* Header */
@@ -262,12 +278,8 @@ a {
 }
 
 .hero__desc {
-    width: 391px;;
-    margin: 24px 0 38px;
-    font-weight: 400;
-    font-size: 1.6rem;
-    line-height: 1.88;
-    color: #656689;
+    width: 391px;
+    margin-bottom: 38px;
 }
 
 .hero-cta {
@@ -311,17 +323,8 @@ a {
     row-gap: 146px;
 }
 
-.about__label {
-    font-family: 'Sora';
-    font-weight: 600;
-    font-size: 1.6rem;
-    line-height: 1;
-    color: #5E6085;
-}
-
 .about__heading {
     width: 446px;
-    margin: 15px 0 24px;
 }
 
 .about__desc {
@@ -599,16 +602,6 @@ a {
     text-align: center;
 }
 
-.service__label {
-    margin-bottom: 15px;
-    font-family: 'Sora';
-    font-weight: 600;
-    font-size: 1.6rem;
-    line-height: 1;
-    text-align: center;
-    color: #5E6085;
-}
-
 .service__body {
     display: flex;
     align-items: center;
@@ -705,6 +698,141 @@ a {
 
 .service__cta {
     width: 214px;
-    color: var(--primary-color);
-    border-color: currentColor;
 }
+
+/* Member */
+.member {
+    padding: 130px 0;
+}
+
+.member__top {
+    text-align: center;
+    margin-bottom: 59px;
+}
+
+.member__list {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    column-gap: 37px;
+}
+
+.member__cta-wrap,
+.member__item {
+    text-align: center;
+}
+
+.member-item__media {
+    position: relative;
+    margin: 0 16px;
+    border-radius: 130px;
+}
+
+.member-item__media::before {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 266px;
+    left: 0;
+    bottom: 0;
+    border-radius: inherit;
+}
+
+.member__item:nth-child(1) .member-item__media::before {
+    background: linear-gradient(180deg, #90CCFF 0%, #59A8EB 95.96%);
+}
+
+.member__item:nth-child(2) .member-item__media::before {
+    background: linear-gradient(180deg, #FF997E 0%, #F3752E 100%);
+}
+
+.member__item:nth-child(3) .member-item__media::before {
+    background: linear-gradient(180deg, #FABF3E 0%, #FFA14A 100%);
+}
+
+.member__item:nth-child(4) .member-item__media::before {
+    background: linear-gradient(180deg, #5BD6E2 0%, #00A7CC 100%);
+}
+
+.member-item__media::after {
+    content: url(../assets/icon/mem-icon-01.svg);
+    bottom: 0;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+.member__item:nth-child(1) .member-item__media::after {
+    content: url(../assets/icon/mem-icon-01.svg);
+}
+
+.member__item:nth-child(2) .member-item__media::after {
+    content: url(../assets/icon/member-icon.svg);
+}
+
+.member__item:nth-child(3) .member-item__media::after {
+    content: url(../assets/icon/member-icon-03.svg);
+}
+
+.member__item:nth-child(4) .member-item__media::after {
+    content: url(../assets/icon/member-icon-04.svg);
+}
+
+.member__item:nth-child(even) .member-item__media::after {
+    top: 16px;
+    bottom: initial;
+}
+
+.member-item__img {
+    position: relative;
+    z-index: 1;
+    width: 100%;
+    display: block;
+    border-radius: inherit;
+}
+
+.member-item__info {
+    margin-top: 34px;
+}
+
+.member-item__position {
+    font-weight: 400;
+    font-size: 1.4rem;
+    line-height: 1;
+    color: #656689;
+}
+
+.member-item__title {
+    margin-top: 14px;
+    font-family: 'Sora';
+    font-weight: 600;
+    font-size: 2.2rem;
+    line-height: 1;
+    color: #000958;
+}
+
+.member__cta-wrap {
+    margin-top: 48px;
+}
+
+.member__cta {
+    width: 193px;
+    font-weight: 500;
+}
+
+/* Pricing */
+.pricing {
+    padding: 86px 0;
+    text-align: center;
+    background-color: yellowgreen;
+}
+
+.pricing__desc {
+    display: inline-block;
+    text-align: center;
+    width: 709px;
+}
+
+/* z-index đi liền vs position:relative */
+/* Tính kế thừa của border-radius -> có thể giúp cho image ẩn vào bên trong và nó không sẵn có ở lớp giả*/
+/* Vị trí của ảnh phụ thuộc vào thẻ div lớn của nó -> có nghĩa là dựa trên thẻ div lớn làm gốc */
